[tool.poetry]
name = "learn-pyspark"
version = "0.1.0"
description = ""
authors = ["Noé Fischer <noe.fischer@d-one.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
